# server/src/routes/user.routes.ts
@@ -1,10 +1,14 @@
 import express from "express";
 
 import { authMiddleware } from "../middlewares/auth-middleware.js";
-import { verifyUserEmail } from "../controllers/user.controller.js";
+import {
+  getUserProfile,
+  verifyUserEmail,
+} from "../controllers/user.controller.js";
 
 const router = express.Router();
 
 router.post("/verify-email", authMiddleware, verifyUserEmail);
+router.post("/profile", authMiddleware, getUserProfile);
 
 export { router as userRouter };
